@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 21-04-2006 added: Support for unswizzled 32 bit textures in Textures.xpr
  - 20-04-2006 fixed: some dvd's would display a completly white overlay over almost whole screen, or very odd overlays
  - 20-04-2006 fixed: if an invalid audio/sub stream was selected from dvdmenu, wrong stream would be indicated from osd. 
                      too many audio/sub streams would be shown in osd
